--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   iconsax: ^0.0.8
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.13.0
 
 dev_dependencies:
   flutter_test:
@@ -21,7 +22,9 @@ dev_dependencies:
 flutter:
 
   uses-material-design: true
-
+  assets:
+       - assets/streetmarket_icon.png
+       - assets/streetmarket_text.png
   # fonts:
   #   - family: Schyler
   #     fonts:
