--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   iconsax: ^0.0.8
   cupertino_icons: ^1.0.2
   firebase_core: ^2.13.0
+  firebase_auth: ^4.6.1
+  cloud_firestore: ^4.7.1
 
 dev_dependencies:
   flutter_test:
