--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   iconsax: ^0.0.8
   flutter_neumorphic: ^3.0.3
+  google_fonts: ^2.1.0
   cupertino_icons: ^1.0.2
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.1
