--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   firebase_auth: ^4.6.1
   cloud_firestore: ^4.7.1
   provider: ^6.0.5
+  image_picker: ^0.8.7+5
+  firebase_storage: ^11.2.1
 
 dev_dependencies:
   flutter_test:
