--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   provider: ^6.0.5
   image_picker: ^0.8.7+5
   firebase_storage: ^11.2.1
+  flutter_image: ^4.1.6
 
 dev_dependencies:
   flutter_test:
