--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   image_picker: ^0.8.7+5
   firebase_storage: ^11.2.1
   flutter_image: ^4.1.6
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_test:
