search_mode base functionality implemented

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,12 @@ dependencies:
   firebase_storage: ^11.2.1
   flutter_image: ^4.1.6
   uuid: ^3.0.7
-  firestore_search_input: ^0.2.0
+  # firestore_search_input: ^0.2.0
+
+  firestore_search_input:
+    git:
+      url: https://github.com/JohnEsleyer/firestore_search_input
+
 
 dev_dependencies:
   flutter_test:
